Kubernetes/Manifests/db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: test
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      name: web
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: test
spec:
   serviceName: postgres-service
   replicas: 3
   selector:
    matchLabels:
      app: db
   template:
    metadata:
      labels:
        app: db
        selector: db
    spec:
      containers:
        - name: postgres-container
          image: postgres:12.12-alpine
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
