Kubernetes/Manifests/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react
spec:
  selector:
    matchLabels:
      app: react
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: react-pod
      labels:
        app: react
    spec:
      containers:
      - name: reactapp-container
        image: gerrome/react-site
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    app: react
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
