Kubernetes/Manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myreactapp-service
  labels:
    app: react
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
