Kubernetes/Manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - gerrome.com.ng
    secretName: letsencrypt-staging
  rules:
  - host: gerrome.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myreactapp-service
            port:
              number: 80
