Kubernetes/Manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  rules:
  - host: gerrome.com.ng
    http:
     paths:
     - path: /?(.*)
       pathType: Prefix
       backend:
         service:
           name: react-service
           port:
             number: 80
